feat: validations added